PT Search dynamic AIDOCID

--- a/src/features/Container/Protocols/POC/PT/Expand/resize.scss
+++ b/src/features/Container/Protocols/POC/PT/Expand/resize.scss
@@ -26,4 +26,10 @@
     cursor: w-resize;
     display: none;
   }
+  .pt-select {
+    height: 32px;
+    box-sizing: border-box;
+    padding: 6px 10px;
+    width: 250px;
+  }
 }
