PT Search Header name

--- a/src/features/Container/Protocols/POC/PT/style.scss
+++ b/src/features/Container/Protocols/POC/PT/style.scss
@@ -110,6 +110,18 @@
     }
   }
 }
+.pt-search-select {
+  margin: 10px;
+  label {
+    margin: 10px;
+  }
+}
+.pt-search-header {
+  margin: 10px;
+  label {
+    margin: 10px;
+  }
+}
 .pt-search {
   padding-left: 5px;
   input {
