--- a/src/features/Container/Protocols/POC/Metadata/View-only/viewOnly.scss
+++ b/src/features/Container/Protocols/POC/Metadata/View-only/viewOnly.scss
@@ -1,5 +1,12 @@
 .study-population-acco {
-  margin-top: 20px;
+  margin-top: 10px;
   margin-bottom: 20px;
   padding-left: 10px;
+}
+.meta-study-population-acco {
+  padding: 0 12px 12px 12px;
+  display: block;
+}
+.derived-mechanism {
+  margin-top: 10px;
 }
