--- a/src/features/Container/Protocols/POC/Metadata/components/medical.scss
+++ b/src/features/Container/Protocols/POC/Metadata/components/medical.scss
@@ -1,20 +1,34 @@
 .medical-term {
   display: flex;
+  max-width: 100%;
+  flex-wrap: wrap;
+  margin-bottom: 10px;
+  font-size: 13px;
   .word {
-    margin: 5px;
+    margin: 2px;
     display: flex;
     flex-direction: column;
   }
   .word-box {
     border: 1px solid #eee;
     label {
-      border-bottom: 1px solid;
-      padding: 3px;
-      background: #e3e3e3;
+      border: 1px solid;
+      padding: 2px;
+      padding-left: 7px;
+      background: #f1f1f1;
     }
-    span {
-      background: rgb(255, 219, 225);
-      padding: 3px;
+    button {
+      margin-right: 0px !important;
+      height: 10px;
+      width: 30px;
+      svg {
+        height: 16px;
+        width: 16px;
+      }
     }
+    // span {
+    //   background: rgb(255, 219, 225);
+    //   padding: 3px;
+    // }
   }
 }
