--- a/src/features/Container/Protocols/POC/Metadata/components/attribute.scss
+++ b/src/features/Container/Protocols/POC/Metadata/components/attribute.scss
@@ -16,3 +16,21 @@
   font-size: 16px;
   font-weight: 500;
 }
+.ag-theme-alpine {
+  display: flex;
+  justify-content: flex-start;
+  table,
+  th,
+  td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+  th,
+  td {
+    padding: 15px;
+    text-align: left;
+  }
+  table {
+    margin-top: 10px;
+  }
+}
