--- a/src/features/Container/Protocols/POC/Metadata/components/attribute.scss
+++ b/src/features/Container/Protocols/POC/Metadata/components/attribute.scss
@@ -16,7 +16,7 @@
   font-size: 16px;
   font-weight: 500;
 }
-.ag-theme-alpine {
+.ag-theme-alpine-at {
   display: flex;
   justify-content: flex-start;
   table,
