--- a/src/features/Container/Protocols/POC/Metadata/style.scss
+++ b/src/features/Container/Protocols/POC/Metadata/style.scss
@@ -45,10 +45,15 @@
           height: 15px;
           width: 15px;
           position: absolute;
+          right: 3px;
+          background-color: rgb(128, 128, 128);
+          padding: 10px;
+          top: 3px;
         }
         .plus-icon {
           height: 10px;
           width: 10px;
+          color: #fff;
         }
       }
     }
