--- a/src/features/Container/Protocols/Tabs/PTSearch/Table.scss
+++ b/src/features/Container/Protocols/Tabs/PTSearch/Table.scss
@@ -1,8 +1,8 @@
 .ag-theme-alpine {
   margin-right: 20px;
-  .ag-header {
-    display: none;
-  }
+  // .ag-header {
+  //   display: none;
+  // }
   button {
     height: 24px;
     img {
