--- a/src/features/Container/Protocols/Tabs/PTSearch/Table.scss
+++ b/src/features/Container/Protocols/Tabs/PTSearch/Table.scss
@@ -12,7 +12,7 @@
   }
   .cell-wrap-text {
     white-space: normal !important;
-    padding: 10px 12px;
+    padding: 5px;
   }
   .ag-cell .value-inside {
     word-break: normal;
